Instagram API integration

--- a/app/views/feed/view.html.erb
+++ b/app/views/feed/view.html.erb
@@ -1,3 +1,6 @@
 <div class="container">
   <p><%= @hashtag %></p>
+  <% for media_item in @client.tag_recent_media(@tags[0].name) %>
+  <img src='<%= media_item.images.thumbnail.url %>'>
+  <% end %>
 </div>
