Removed oauth from basic media fetch and refactored index into home controller.

--- a/app/views/feed/view.html.erb
+++ b/app/views/feed/view.html.erb
@@ -1,6 +1,10 @@
 <div class="container">
-  <p><%= @hashtag %></p>
-  <% for media_item in @client.tag_recent_media(@tags[0].name) %>
+  <p>
+    <%= @hashtag %>
+  </p>
+    
+  <% for media_item in @media %>
   <img src='<%= media_item.images.thumbnail.url %>'>
   <% end %>
+    
 </div>
