--- a/app/assets/stylesheets/feed.scss
+++ b/app/assets/stylesheets/feed.scss
@@ -3,3 +3,12 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 @import "bootstrap";
+
+body {
+    background-repeat:no-repeat;
+    background-attachment:fixed;
+    background-position:100% 100%;
+    //min-height:100%;
+    //min-width:100%;
+    background-size:cover;
+}
