--- a/app/assets/stylesheets/feed.scss
+++ b/app/assets/stylesheets/feed.scss
@@ -4,11 +4,14 @@
 
 @import "bootstrap";
 
-body {
-    background-repeat:no-repeat;
-    background-attachment:fixed;
-    background-position:100% 100%;
-    //min-height:100%;
-    //min-width:100%;
-    background-size:cover;
+.image {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    top: 0; left: 0; bottom: 0; right: 0;
+    display: none;
 }
