Added Instagram ID columns to data models and added Sidekiq for offloading the capturing of media.

--- a/app/views/feed/view.html.erb
+++ b/app/views/feed/view.html.erb
@@ -1,5 +1,9 @@
 <div id="slideshow">
+<% testing = true %>
+<% unless testing %>
   <% for media_item in @media %>
   <div id="<%= media_item.id %>" class="image" style="background-image:url('<%= media_item.images.standard_resolution.url %>')"></div>
   <% end %>
+<% end %>
+  <p><%= @media.pagination.inspect %></p>
 </div>
