First round of caching media url's.

--- a/app/views/feed/view.html.erb
+++ b/app/views/feed/view.html.erb
@@ -5,5 +5,5 @@
   <div id="<%= media_item.id %>" class="image" style="background-image:url('<%= media_item.images.standard_resolution.url %>')"></div>
   <% end %>
 <% end %>
-  <p><%= @media.pagination.inspect %></p>
+  <p><%= @media.count %></p>
 </div>
