--- a/app/views/feed/view.html.erb
+++ b/app/views/feed/view.html.erb
@@ -1,5 +1,5 @@
 <div id="slideshow">
-  <% for media_item in @media %>
-  <div id="<%= media_item.id %>" class="image" style="background-image:url('<%= media_item.images.standard_resolution.url %>')"></div>
+  <% for media_url in @media_urls %>
+  <div class="image" style="background-image:url('<%= media_url %>')"></div>
   <% end %>
 </div>
