--- a/app/views/feed/view.html.erb
+++ b/app/views/feed/view.html.erb
@@ -1,15 +1,16 @@
 <% if @no_media %>
-  <%= render "no_media" %>
+	<%= render "no_media" %>
 <% else %>
-<div id="slideshow">
-  <% testing = true %>
-  <% unless testing %>
-  <% for media_item in @media %>
-  <div id="<%= media_item.id %>" class="image" style="background-image:url('<%= media_item.images.standard_resolution.url %>')"></div>
-  <% end %>
-  <% end %>
-  <p>
-    <%= @starting_url %>
-  </p>
-</div>
+	<% testing = true %>
+	<% unless testing %>
+		<div id="slideshow">
+			<% for media_item in @media %>
+			<div id="<%= media_item.id %>" class="image" style="background-image:url('<%= media_item.images.standard_resolution.url %>')"></div>
+			<% end %>
+		</div>
+	<% else %>
+		<p>
+			<%= @starting_url %>
+		</p>
+	<% end %>
 <% end %>
