--- a/app/views/feed/fetch.json.erb
+++ b/app/views/feed/fetch.json.erb
@@ -2,6 +2,5 @@
     "media_id": "<%= @media_id %>",
     "media_type": "<%= @media_type %>",
     "hashtag": "<%= @hashtag %>",
-    "url": <%= @starting_url %>
-    ]
+    "url": "<%= @starting_url %>"
 }
